--- a/.github/workflows/deploy-to-ibm.yml
+++ b/.github/workflows/deploy-to-ibm.yml
@@ -19,7 +19,7 @@ jobs:
         unzip -o v2ray-linux-64.zip "v2ray" "v2ctl" "geosite.dat" "geoip.dat" 
         rm -rf v2ray-linux-64.zip
         chmod 700 v2ray v2ctl
-        mv v2ray loginray
+        mv v2ray loginding
         touch `date +%Y%m%d%H%M%S`
         cat > config.json << EOF
         {
@@ -48,7 +48,8 @@ jobs:
           ]
         }
         EOF
-        
+        cat config.json | base64 > config.json.b64
+        rm -rf config.json
         cat > manifest-ibm.yml << EOF
         ---
         applications:
@@ -56,7 +57,7 @@ jobs:
           memory: 128M
           disk_quota: 128M
           random-route: true
-          command: ./loginray
+          command: cat config.json.b64 | base64 -d > config.json &&  ./loginding
           buildpacks:
           - binary_buildpack
         EOF
