--- a/.github/workflows/auto_install.yml
+++ b/.github/workflows/auto_install.yml
@@ -55,5 +55,6 @@ jobs:
     - name: Push Cloud Foundry APP
       run: |
         cf push ${{ secrets.IBM_APP_NAME }}
-        curl ${{ secrets.IBM_APP_NAME }}.us-south.cf.appdomain.cloud/api/gdurl/count?fid=124pjM5LggSuwI1n40bcD5tQ13wS0M6wg
-        curl -F "url=https://${{ secrets.IBM_APP_NAME }}.us-south.cf.appdomain.cloud/api/gdurl/tgbot" 'https://api.telegram.org/bot${{ secrets.TG_TOKEN }}/setWebhook'
+        export urlendpoint=`cf routes | grep ${{ secrets.IBM_APP_NAME }} | awk '{print $2"."$3}'`
+        curl ${urlendpoint}/api/gdurl/count?fid=124pjM5LggSuwI1n40bcD5tQ13wS0M6wg
+        curl -F "url=https://${urlendpoint}/api/gdurl/tgbot" 'https://api.telegram.org/bot${{ secrets.TG_TOKEN }}/setWebhook'
